# stealth

./: .copilot-wait-run.ps1  .gitattributes  .gitignore  README.md  TODO.md  bun.lockb  diff.txt  errors-catalogue.json  eslint.config.js  full_diff.txt  install.bat  otp-fix-validation.test.js  package-lock.json  package.json  playwright.config.ts  playwright.visual.config.ts  pr-body.md  test.bat  tsconfig.json  vitest.config.cjs  vitest.config.ts
.github/workflows/: ci.yml
contracts/soroban/lifecycle/: Cargo.toml
contracts/soroban/lifecycle/src/: lib.rs
contracts/soroban/receipts/: BUILD_VERIFICATION.md  CI_STATUS.md  Cargo.toml  IMPROVEMENTS.md  INDEX.md  README.md  SUMMARY.md  TESTING_GUIDE.md  VALIDATION.md
contracts/soroban/receipts/docs/: error-paths.md  ledger-integration.md  storage.md
contracts/soroban/receipts/src/: lib.rs
contracts/soroban/receipts/test_snapshots/test/: recipient_can_publish_read_receipt.1.json
docs/: api-reference.md
docs/api/: README.md
docs/architecture/: README.md  proof-inspector.md
docs/deployment/: backup-restore.md
docs/product/: README.md  icp-controlled-access-research.md
docs/proof-inspector/: HANDOFF.md
docs/protocol/: relay-auth-replay.md
docs/security/: README.md  canonical-request-signing.md  threat-model.md
patches/: entities+4.5.0.patch
protocol/vectors/: vectors.json
scripts/: apply-entities-patch.cjs  apply-entities-patch.js  generate-api-artifacts.mjs
src/: routeTree.gen.ts  server.ts  styles.css
src/config/: network.ts
src/hooks/: use-action-queue.ts  use-focus-trap.ts  use-mobile.tsx  (+4 more)
(+1132 files in other folders)
